--- a/Demo.PL/Views/_ViewImports.cshtml
+++ b/Demo.PL/Views/_ViewImports.cshtml
@@ -1,5 +1,7 @@
 ﻿@using Demo.PL
 @using Demo.PL.Models
 @using Demo.BLL.DTO.Department_DTO
-
+@using Demo.BLL.DTO.Employee_DTO
+@using Demo.DAL.Models.EmployeeModel
+@using Demo.DAL.Models.Shared
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
