Add- Partial View

--- a/Demo.PL/Views/_ViewImports.cshtml
+++ b/Demo.PL/Views/_ViewImports.cshtml
@@ -4,4 +4,7 @@
 @using Demo.BLL.DTO.Employee_DTO
 @using Demo.DAL.Models.EmployeeModel
 @using Demo.DAL.Models.Shared
+@using Demo.PL.Models.Employee
+@using Demo.PL.Models.Depaartment
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
