--- a/Demo.PL/Views/_ViewImports.cshtml
+++ b/Demo.PL/Views/_ViewImports.cshtml
@@ -6,5 +6,5 @@
 @using Demo.DAL.Models.Shared
 @using Demo.PL.Models.Employee
 @using Demo.PL.Models.Depaartment
-
+@using Demo.BLL.Services
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
