--- a/Demo.PL/Views/Employee/CreatEditPartialView.cshtml
+++ b/Demo.PL/Views/Employee/CreatEditPartialView.cshtml
@@ -1,5 +1,8 @@
 ﻿@model EmployeeViewModel
-
+@inject IDepartmentServices departmentService
+@{
+    var departments = new SelectList(departmentService.GetAllDepartments(),"Id",nameof(DepartmentDto.Name));
+}
 <div class="form-group mb-3 col-6">
     <label class="form-label" asp-for="Name"></label>
     <input asp-for="Name" class="form-control" />
@@ -35,6 +38,17 @@
     <input asp-for="Salary" class="form-control" />
     <span asp-validation-for="Salary" class="text-danger"></span>
 </div>
+
+<div class="form-group mb-3 col-6">
+    <label class="form-label" asp-for="DepartmentId"></label>
+    <select class="form-control" asp-for="DepartmentId" asp-items="departments">
+        <option value="@null">Choose Department</option>
+    </select>
+    <span asp-validation-for="DepartmentId" class="text-danger"></span>
+</div>
+
+
+
 <div class="form-group mb-3 col-6">
     <label class="form-label" asp-for="EmployeeType"></label>
     <select class="form-control" asp-for="EmployeeType" asp-items="Html.GetEnumSelectList<EmployeeType>()">
