Add Register Controller

--- a/Demo.PL/Views/_ViewImports.cshtml
+++ b/Demo.PL/Views/_ViewImports.cshtml
@@ -7,4 +7,5 @@
 @using Demo.PL.Models.Employee
 @using Demo.PL.Models.Depaartment
 @using Demo.BLL.Services
+@using Demo.PL.Models.Identity
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
