--- a/Demo.PL/Views/_ViewImports.cshtml
+++ b/Demo.PL/Views/_ViewImports.cshtml
@@ -8,4 +8,7 @@
 @using Demo.PL.Models.Depaartment
 @using Demo.BLL.Services
 @using Demo.PL.Models.Identity
+@using Demo.PL.Models.Users
+@using Demo.PL.Models.Roles
+
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
